Ver 0.0.0.6.2 beta - Added barely working email verification

--- a/Spring/bank/src/main/resources/application.yml
+++ b/Spring/bank/src/main/resources/application.yml
@@ -11,6 +11,16 @@ server:
         secure: false
 
 spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: -
+    password: -
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls.enable: true
   security:
     filter:
       order: 0  # Ensure security filter is first
