--- a/Spring/bank/src/main/resources/application.yml
+++ b/Spring/bank/src/main/resources/application.yml
@@ -12,15 +12,16 @@ server:
 
 spring:
   mail:
-    host: smtp.gmail.com
+    host: smtp.office365.com
     port: 587
-    username: -
-    password: -
+    username: cholevwajana@hotmail.com
+    password: gjjbrjrxenbtqphn
     properties:
       mail:
         smtp:
           auth: true
-          starttls.enable: true
+          starttls:
+            enable: true
   security:
     filter:
       order: 0  # Ensure security filter is first
@@ -41,3 +42,5 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
+
+
