--- a/Spring/bank/build.gradle
+++ b/Spring/bank/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'com.microsoft.azure:msal4j:1.13.3'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
