Ver 0.0.0.7.4.2 beta - Password changing with errors, fixing

--- a/Spring/bank/src/main/resources/application.yml
+++ b/Spring/bank/src/main/resources/application.yml
@@ -10,6 +10,11 @@ server:
         http-only: true
         secure: false
 
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
 spring:
   mail:
     host: smtp.gmail.com
