--- a/Spring/bank/build.gradle
+++ b/Spring/bank/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+	implementation 'io.jsonwebtoken:jjwt:0.12.5'
 	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
