--- a/Spring/bank/build.gradle
+++ b/Spring/bank/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.27'
+    implementation 'com.google.guava:guava:31.1-jre'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
