Ver 0.1.0.5 - Added PostgreSQL database initialization file and rebuilded user creation

--- a/Spring/bank/src/main/resources/application.yml
+++ b/Spring/bank/src/main/resources/application.yml
@@ -45,7 +45,7 @@ spring:
     open-in-view: false
     properties:
       hibernate:
-        ddl-auto: validate
+        ddl-auto: update
         connection.provider_disables_autocommit: true
         generate_statistics: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
