--- a/React/bank/package.json
+++ b/React/bank/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bank",
-  "version": "0.1.0",
+  "name": "Urbank",
+  "version": "0.1.7",
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
