Ver 0.7.3 - Added animations, removed unused scripts, fixed bugs

--- a/React/bank/public/manifest.json
+++ b/React/bank/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo.jpg",
+      "src": "logo_purple.png",
       "type": "image/png",
       "sizes": "177x177"
     }
