--- a/React/bank/package.json
+++ b/React/bank/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Urbank",
-  "version": "0.1.0.7.2",
+  "version": "0.7.2",
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.5",
+    "framer-motion": "^12.23.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
