--- a/React/bank/package.json
+++ b/React/bank/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
